--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Flask-Assets==0.8
 Flask-Script==0.5.1
 Flask-Uploads==0.1.3
 Flask-WTF==0.8.2
-Frozen-Flask==0.13
+#Frozen-Flask==0.13
 
 itsdangerous==0.17
 redis==2.7.2
@@ -12,6 +12,3 @@ cssmin==0.1.4
 requests==1.0.4
 # uwsgi==1.4.10
 pytz==2012j
-
-# For parsing the HYFL schedule.
-lxml==3.1.0
