--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "start": "webpack-dev-server --mode development"
   },
   "devDependencies": {
+    "autoprefixer": "^9.1.5",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.3",
+    "postcss-loader": "^3.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "url-loader": "^1.1.1",
