--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.1.5",
+    "copy-webpack-plugin": "^4.5.3",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "html-webpack-inline-source-plugin": "^0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.3",
     "postcss-loader": "^3.0.0",
